# hermitage-alchemy

./: Readme.md  pyproject.toml
hermitage_alchemy/: __init__.py  assembling.py  bootstraping.py  configuration.py
hermitage_alchemy/definition/: contracts.py  exceptions.py
hermitage_alchemy/execution/: __init__.py  fetching.py  read.py  storing.py  write.py
hermitage_alchemy/plugins/: __init__.py  generic.py  total.py  upsert.py
hermitage_alchemy/types/: __init__.py
hermitage_alchemy/types/jsonb/: decoding.py  encoding.py
